[project]
name = "shipment_tracking"
version = "0.0.1"
description = "Shipkia shipment sync and tracking for ERPNext"
authors = [
  { name = "SRIAAS", email = "webdevelopersriaas@gmail.com" }
]

requires-python = ">=3.10"

dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"